feat: implemented streaming into client
